Segunda version del lab 1

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 					<th>2</th>
 					<td>Dí fin a EDD</td>
 					<td>Realicé la prueba biométrica</td>
-					<td>k</td>
-					<td>d</td>
-					<td>m</td>
+					<td>Cambios de aceite</td>
+					<td>Estudiar bootcamp</td>
+					<td>Barbería</td>
 				</tr>
 			</tbody>
 		</table>
@@ -91,6 +91,30 @@
 			Quieres trucos de CSS ? 
 			<a href="https://pin.it/lU4OAYNfC"> Clickeame entonces</a> 
 		</p>
+
+		<form>
+			<fieldset>
+				<legend>Contacto</legend>
+					<br>
+					<label>Primer nombre: </label>
+					<input type="text" name="fname" placeholder="Ingresa tu nombre">
+
+					<br><br>
+					
+					<label> Razón de contacto: </label>
+					<input type="text" height="300px">
+
+					<br><br>
+
+					<label>Correo electrónico: </label>
+					<input type="email" placeholder="**@**.com">
+					<br><br>
+			</fieldset>
+		</form>
+		
+		<br>
+
+		<input type="submit" value="Enviar">
 
 	</body>
 </html>
