--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 		<img src="Juan.jpg" alt="Mira, soy yo" width="150">
 
-		<p>"La wena pa los ingenieros 
-		(Excepto a los de Ambiental)"</p><br>
+		<p>Ingeniería de Sistemas rey</p><br>
 
 		<p>Mis pasatiempos favoritos son...</p>
 
@@ -38,7 +37,7 @@
 
 		<dl>
 			<dt>Este apartado es nadamás para probar, 
-				así que ahí te va la fórumla de empuje:</dt>
+				así que ahí te va la fórmula de empuje:</dt>
 			<dd>
 				<strong>Empuje</strong> = pf · g · V
 				<br><br>
@@ -46,16 +45,16 @@
 				...dónde <br>
 				
 				<em>Pf</em> 
-				-->  Densidad del fluido <br>
+				-->  Densidad del fluído <br>
 				<em>v</em> 
-				-->  Volumen del fluido desplazado por el cuerpo <br>
+				-->  Volumen del fluído desplazado por el cuerpo <br>
 				<em>g</em> 
-				-->  gravedad (9.8m/s) <br>
+				-->  Gravedad (9.8m/s) <br>
 			</dd>
 
 			<br>
 
-			<dt>y tambien la de Aceleración: </dt>
+			<dt>y también la de Aceleración: </dt>
 			<dd>
 				<strong>Aceleración</strong> = ( v<sub>f</sub> - v<sub>i</sub> ) / t 
 			</dd>
@@ -63,7 +62,7 @@
 
 		<p> Okey, ahora las cosas que ya hice la semana pasada... </p>
 
-		<table border="1" width="70%" height="200px">
+		<table border="1" width="90%" height="200px">
 			<thead>
 				<tr>
 					<td>-</td>
